--- a/app/src/main/res/layout/user_login_activity.xml
+++ b/app/src/main/res/layout/user_login_activity.xml
@@ -36,5 +36,16 @@
         android:layout_below="@id/editTextPassword"
         android:layout_marginTop="16dp"
         android:text="Login"/>
+    
+    <Button
+        android:id="@+id/btnCreateAccount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Create Account"
+        android:layout_below="@+id/buttonLogin"
+        android:layout_marginTop="16dp"
+        android:layout_centerHorizontal="true"
+        android:onClick="onCreateAccountClick"/>
+
 
 </RelativeLayout>
