--- a/app/src/main/res/layout/create_acct_activity.xml
+++ b/app/src/main/res/layout/create_acct_activity.xml
@@ -2,21 +2,24 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:gravity="center">
 
     <EditText
         android:id="@+id/editTextUsername"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Create Username" />
+        android:layout_centerHorizontal="true"
+        android:hint="Username" />
 
     <EditText
         android:id="@+id/editTextPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
         android:layout_below="@id/editTextUsername"
         android:layout_marginTop="16dp"
-        android:hint="Create Password"
+        android:hint="Password"
         android:inputType="textPassword"
         android:minHeight="48dp" />
 
@@ -24,9 +27,10 @@
         android:id="@+id/editTextEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
         android:layout_below="@id/editTextPassword"
         android:layout_marginTop="16dp"
-        android:hint="Enter Email"
+        android:hint="Email"
         android:inputType="textEmailAddress"
         android:minHeight="48dp" />
 
@@ -34,6 +38,7 @@
         android:id="@+id/buttonCreateAccount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
         android:layout_below="@id/editTextEmail"
         android:layout_marginTop="16dp"
         android:text="Create Account" />
