--- a/app/src/main/res/layout/user_login_activity.xml
+++ b/app/src/main/res/layout/user_login_activity.xml
@@ -6,12 +6,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
+    android:gravity="center"
     tools:context=".UserLoginActivity">
 
     <EditText
         android:id="@+id/editTextUsername"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
         android:layout_marginBottom="8dp"
         android:hint="Username"
         android:minHeight="48dp"
@@ -21,6 +23,7 @@
         android:id="@+id/editTextPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
         android:layout_below="@id/editTextUsername"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
@@ -33,6 +36,7 @@
         android:id="@+id/buttonLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
         android:layout_below="@id/editTextPassword"
         android:layout_marginTop="16dp"
         android:text="Login"/>
