--- a/app/src/main/res/layout/dashboard_options_activity.xml
+++ b/app/src/main/res/layout/dashboard_options_activity.xml
@@ -13,9 +13,12 @@
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
         android:elevation="4dp"
-        app:title="Your Toolbar Title"
+        app:title="Dashboard Options"
         app:titleTextAppearance="@style/ItalicToolbarText"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
