--- a/app/src/main/res/layout/create_acct_activity.xml
+++ b/app/src/main/res/layout/create_acct_activity.xml
@@ -27,6 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="200dp"
         android:hint="Username"
         android:minHeight="48dp" />
 
