--- a/app/src/main/res/layout/dashboard_options_activity.xml
+++ b/app/src/main/res/layout/dashboard_options_activity.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UserLoginActivity">
+    tools:context=".UserLoginActivity"
+    android:background="@color/DarkBackground">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
