--- a/app/src/main/res/layout/user_login_activity.xml
+++ b/app/src/main/res/layout/user_login_activity.xml
@@ -5,16 +5,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UserLoginActivity">
+    tools:context=".UserLoginActivity"
+    android:background="@color/DarkBackground">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="0dp"
         android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
         android:elevation="4dp"
         app:title="Your Toolbar Title"
         app:titleTextAppearance="@style/ItalicToolbarText"
+        app:titleTextColor="@color/white"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,7 +31,8 @@
         android:minHeight="48dp"
         android:padding="8dp"
         android:textStyle="italic"
-        android:textColor="@color/black"
+        android:textColorHint="@color/white"
+        android:textColor="@color/white"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
@@ -46,7 +48,8 @@
         android:minHeight="48dp"
         android:padding="8dp"
         android:textStyle="italic"
-        android:textColor="@color/black"
+        android:textColorHint="@color/white"
+        android:textColor="@color/white"
         app:layout_constraintTop_toBottomOf="@+id/editTextUsername"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
@@ -56,25 +59,29 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:textStyle="italic"
         android:text=" Login "
-        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:textColor="@color/black"
+        android:textStyle="italic"
+        app:backgroundTint="@color/colorLighterElectricGreen"
         app:layout_constraintBottom_toTopOf="@+id/btnCreateAccount"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
         app:layout_constraintVertical_bias="0.5" />
-    
+
     <Button
         android:id="@+id/btnCreateAccount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Create Account"
         android:layout_marginTop="16dp"
+        android:onClick="onCreateAccountClick"
+        android:text="Create Account"
+        android:textColor="@color/black"
         android:textStyle="italic"
-        app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
-        app:layout_constraintStart_toStartOf="parent"
+        app:backgroundTint="@color/colorLighterElectricGreen"
         app:layout_constraintEnd_toEndOf="parent"
-        android:onClick="onCreateAccountClick"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
