--- a/app/src/main/res/layout/activity_folder_grid.xml
+++ b/app/src/main/res/layout/activity_folder_grid.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- res/layout/activity_folder_grid.xml -->
 <androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,7 +8,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/DarkBackground">
 
-    <!-- Switch View Button to chose between list or grid -->
+    <!-- Switch Button to go between list and grid-->
     <com.google.android.material.switchmaterial.SwitchMaterial
         android:id="@+id/btnSwitchView"
         android:layout_width="wrap_content"
@@ -19,18 +20,19 @@
         android:layout_marginTop="18dp"
         android:padding="8dp"/>
 
-    <!-- RecyclerView with New Folder Button as an fab -->
+    <!-- RecyclerView with the New Folder Button on the bottom (looks better asthetically)-->
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/recyclerViewFolders"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="?attr/actionBarSize"
         android:padding="16dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:listitem="@layout/list_item_folder"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:spanCount="2"
+        tools:listitem="@layout/grid_item_folder"
+        android:contentDescription="@string/switch_button"/>
 
-    <!-- New Folder Button -->
+    <!-- New Folder Button as a fab -->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabAddFolder"
         android:layout_width="wrap_content"
