--- a/app/src/main/res/layout/new_note_activity.xml
+++ b/app/src/main/res/layout/new_note_activity.xml
@@ -20,7 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/toolbar"
-        android:contentDescription="Enter Your Notes Here"
+        android:contentDescription="@string/enter_note"
         android:background="@drawable/lined_paper"
         android:lineSpacingExtra="10dp"
         android:textColor="#000000"
@@ -32,7 +32,7 @@
         android:id="@+id/buttonSaveNote"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Save Note"
+        android:text="@string/save_new_note"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_margin="16dp"/>
