--- a/app/src/main/res/layout/user_login_activity.xml
+++ b/app/src/main/res/layout/user_login_activity.xml
@@ -27,7 +27,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="200dp"
-        android:hint="Username"
+        android:hint="@string/username"
         android:minHeight="48dp"
         android:padding="8dp"
         android:textStyle="italic"
@@ -43,7 +43,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/editTextUsername"
         android:layout_marginTop="20dp"
-        android:hint="Password"
+        android:hint="@string/password"
         android:inputType="textPassword"
         android:minHeight="48dp"
         android:padding="8dp"
@@ -59,7 +59,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text=" Login "
+        android:text="@string/login"
         android:textColor="@color/black"
         android:textStyle="italic"
         app:backgroundTint="@color/colorLighterElectricGreen"
@@ -75,7 +75,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:onClick="onCreateAccountClick"
-        android:text="Create Account"
+        android:text="@string/create_account"
         android:textColor="@color/black"
         android:textStyle="italic"
         app:backgroundTint="@color/colorLighterElectricGreen"
