--- a/app/src/main/res/layout/created_folder_activity.xml
+++ b/app/src/main/res/layout/created_folder_activity.xml
@@ -11,9 +11,10 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
+        android:background="@color/DarkBackground"
         android:elevation="4dp"
         app:title="Your Toolbar Title"
+        app:titleTextColor="@color/white"
         app:titleTextAppearance="@style/ItalicToolbarText"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
 
