--- a/app/src/main/res/layout/user_login_activity.xml
+++ b/app/src/main/res/layout/user_login_activity.xml
@@ -60,7 +60,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="@string/login"
-        android:textColor="@color/black"
+        android:textColor="@color/DarkBackground"
         android:textStyle="italic"
         app:backgroundTint="@color/colorLighterElectricGreen"
         app:layout_constraintBottom_toTopOf="@+id/btnCreateAccount"
@@ -76,7 +76,7 @@
         android:layout_marginTop="16dp"
         android:onClick="onCreateAccountClick"
         android:text="@string/create_account"
-        android:textColor="@color/black"
+        android:textColor="@color/DarkBackground"
         android:textStyle="italic"
         app:backgroundTint="@color/colorLighterElectricGreen"
         app:layout_constraintEnd_toEndOf="parent"
