--- a/app/src/main/res/layout/create_acct_activity.xml
+++ b/app/src/main/res/layout/create_acct_activity.xml
@@ -70,7 +70,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="16dp"
             android:text="@string/create_account"
-            android:textColor="@color/black"/>
+            android:textColor="@color/DarkBackground"/>
     </RelativeLayout>
 
 </RelativeLayout>
