--- a/app/src/main/res/layout/item_folder.xml
+++ b/app/src/main/res/layout/item_folder.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+git add<?xml version="1.0" encoding="utf-8"?>
 <Button xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/buttonFolder"
     android:layout_width="match_parent"
