--- a/app/src/main/res/layout/new_folder_activity.xml
+++ b/app/src/main/res/layout/new_folder_activity.xml
@@ -12,7 +12,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/DarkBackground"
+        android:background="@color/colorSteelBlue"
         android:elevation="4dp"
         app:title="Create Folder"
         app:titleTextAppearance="@style/ItalicToolbarText"
