--- a/app/src/main/res/layout/dashboard_options_activity.xml
+++ b/app/src/main/res/layout/dashboard_options_activity.xml
@@ -37,12 +37,12 @@
         android:id="@+id/btn_new_folder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:drawableLeft="@drawable/ic_action_name_white"
         android:text="@string/create_new_folder"
-        android:textStyle="italic"
-        android:textColor="@color/DarkBackground"
-        android:backgroundTint="@color/colorLighterElectricGreen"/>
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="16dp"
+        android:backgroundTint="@color/colorLighterElectricGreen"
+        android:textColor="@color/DarkBackground"/>
 
 </RelativeLayout>
 
