--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="colorPrimary">@color/DarkBackground</item>
+        <item name="colorPrimary">@color/colorSteelBlue</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
