--- a/app/src/main/res/layout/created_folder_activity.xml
+++ b/app/src/main/res/layout/created_folder_activity.xml
@@ -7,22 +7,21 @@
     android:layout_height="match_parent"
     android:background="@color/DarkBackground">
 
-    <EditText
-        android:id="@+id/searchbar"
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/searchView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:height="48dp"
         android:layout_below="@id/toolbar"
-        android:hint="@string/search_note"
-        android:drawableStart="@drawable/baseline_search"
+        android:iconifiedByDefault="false"
+        android:queryHint="Search folders"
+        android:background="@color/colorMetallicSeagreen"
         />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewFolders"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/searchbar"/>
+        android:layout_below="@id/searchView"/>
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
