--- a/app/src/main/res/layout/dashboard_options_activity.xml
+++ b/app/src/main/res/layout/dashboard_options_activity.xml
@@ -8,22 +8,20 @@
     android:background="@color/DarkBackground">
 
 
-    <EditText
-        android:id="@+id/searchbar"
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/searchView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:height="48dp"
         android:layout_below="@id/toolbar"
-        android:hint="@string/search_note"
-        android:drawableStart="@drawable/baseline_search"
+        android:iconifiedByDefault="false"
+        android:queryHint="Search folders"
         />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewFolders"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/searchbar"/>
+        android:layout_below="@id/searchView"/>
 
 
 
@@ -41,7 +39,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/searchbar"
+        android:layout_below="@id/searchView"
         android:layout_centerInParent="true">
     </RelativeLayout>
 
