--- a/app/src/main/res/layout/dashboard_options_activity.xml
+++ b/app/src/main/res/layout/dashboard_options_activity.xml
@@ -13,8 +13,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/toolbar"
+        android:background="@color/DarkBackground"
         android:iconifiedByDefault="false"
         android:queryHint="Search folders"
+        app:commitIcon="@drawable/baseline_search_24"
         />
 
     <androidx.recyclerview.widget.RecyclerView
