--- a/app/src/main/res/layout/create_acct_activity.xml
+++ b/app/src/main/res/layout/create_acct_activity.xml
@@ -13,6 +13,7 @@
         android:layout_height="?attr/actionBarSize"
         android:background="@color/colorSteelBlue"
         android:elevation="4dp"
+        android:textSize="90sp"
         app:title="Your Toolbar Title"
         app:titleTextAppearance="@style/ItalicToolbarText"
         app:titleTextColor="@color/white"
@@ -68,7 +69,7 @@
             android:backgroundTint="@color/colorLighterElectricGreen"
             android:layout_below="@id/editTextEmail"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="25dp"
             android:text="@string/create_account"
             android:textColor="@color/DarkBackground"/>
     </RelativeLayout>
