--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,5 +7,7 @@
 
     <style name="ItalicToolbarText" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
         <item name="android:textStyle">italic</item>
+        <item name="android:textSize">30dp</item>
+        <item name="android:gravity">center</item>
     </style>
 </resources>
