--- a/app/src/main/res/layout/dashboard_options_activity.xml
+++ b/app/src/main/res/layout/dashboard_options_activity.xml
@@ -12,7 +12,7 @@
         android:id="@+id/searchView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/toolbar"
+        android:layout_below="@id/search_toggle"
         android:background="@color/DarkBackground"
         android:iconifiedByDefault="false"
         android:queryHint="Search folders"
@@ -27,16 +27,38 @@
 
 
 
+  <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:orientation="horizontal"
+      android:id="@+id/search_toggle">
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:background="@color/colorSteelBlue"
         android:elevation="4dp"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        app:title="Your Toolbar Title"
-        app:titleTextAppearance="@style/ItalicToolbarText"
+        app:title="@string/app_folders"
+        android:fontFamily="cursive"
+        android:textStyle="italic"
         app:titleTextColor="@color/white" />
+
+      <ToggleButton
+          android:id="@+id/toggleViewButton"
+          android:layout_width="wrap_content"
+          android:layout_height="match_parent"
+          android:layout_gravity="end"
+          android:textOn="@string/grid"
+          android:textOff="@string/list"
+          android:checked="true"
+          android:background="@drawable/rounded_toggle_background"
+          android:textColor="@color/DarkBackground"
+          android:theme="@style/ToggleButtonStyle"
+          />
+  </LinearLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -49,12 +71,15 @@
         android:id="@+id/btn_new_folder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/create_new_folder"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_margin="16dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         android:backgroundTint="@color/colorLighterElectricGreen"
-        android:textColor="@color/DarkBackground"/>
+        android:text="@string/create_new_folder"
+        android:textColor="@color/DarkBackground" />
 
 </RelativeLayout>
 
