--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,4 +10,8 @@
         <item name="android:textSize">30dp</item>
         <item name="android:gravity">center</item>
     </style>
+    <style name="ToggleButtonStyle" parent="Widget.AppCompat.Button">
+        <item name="android:textSize">14sp</item>
+        <!-- Add other style attributes if needed -->
+    </style>
 </resources>
