--- a/app/src/main/res/layout/new_note_activity.xml
+++ b/app/src/main/res/layout/new_note_activity.xml
@@ -22,10 +22,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/toolbar"
-        android:contentDescription="@string/enter_note"
-        android:background="@drawable/lined_paper"
+        android:hint="@string/enter_note"
+        android:textColorHint="@color/colorMetallicSeagreen"
+        android:background="@color/colorMidnightBlue"
         android:lineSpacingExtra="10dp"
-        android:textColor="#000000"
+        android:textColor="@color/white"
         android:padding="24dp"
         android:gravity="top"
         android:inputType="textMultiLine" />
