--- a/app/src/main/res/layout/dashboard_options_activity.xml
+++ b/app/src/main/res/layout/dashboard_options_activity.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/DarkBackground">
+    android:background="@color/colorSteelBlue">
 
 
     <androidx.appcompat.widget.SearchView
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/search_toggle"
-        android:background="@color/DarkBackground"
+        android:background="@color/colorMidnightBlue"
         android:iconifiedByDefault="false"
         android:queryHint="Search folders"
         app:commitIcon="@drawable/baseline_search_24"
@@ -23,7 +23,8 @@
         android:id="@+id/recyclerViewFolders"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/searchView"/>
+        android:layout_below="@id/searchView"
+        android:background="@color/DarkBackground"/>
 
 
 
