--- a/app/src/main/res/layout/dashboard_options_activity.xml
+++ b/app/src/main/res/layout/dashboard_options_activity.xml
@@ -42,7 +42,7 @@
         android:background="@color/colorSteelBlue"
         android:elevation="4dp"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        app:title="@string/app_folders"
+        app:title="@string/app_name"
         android:fontFamily="cursive"
         android:textStyle="italic"
         app:titleTextColor="@color/white" />
